tests/ui/rfcs/rfc-2093-infer-outlives/self-structs.stderr
error: rustc_outlives
  --> $DIR/self-structs.rs:4:1
   |
LL | struct Foo<'a, 'b, T> {
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: T: 'a

error[E0640]: rustc_outlives
  --> $DIR/self-structs.rs:4:1
   |
LL | struct Foo<'a, 'b, T> {
   | ^^^^^^^^^^^^^^^^^^^^^
   |
note: T: 'a
  --> $DIR/self-structs.rs:10:14
   |
LL |     where U: 'x,
   |              ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0640`.
